Commit 1: Completed detailed EDA with visualizations and insights

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ reports/*
 !data/.gitkeep
 !models/.gitkeep
 !reports/.gitkeep
+!data/processed/*.dvc
 
 # Jupyter checkpoints
 .ipynb_checkpoints/
